test/c_frontend/negative/undeclared_var.c
/* Test undeclared variable error */
#include <stdio.h>

int main() {
    /* Using undeclared variable */
    printf("x = %d\n", x);
    
    return 0;
}